# job_interview_generator

./: README.md  app.py  pyproject.toml  requirements.txt  smoke_test.py
data/sample_jds/: jd1.txt  jd2.txt  jd3.txt  jd4.txt  jd5.txt
src/jd2interview/: __main__.py
src/jd2interview/bank/: question_bank.py
src/jd2interview/crawl/: base.py  github_lists.py  pipeline.py  role_aware.py  stackoverflow.py  stackoverflow_requests.py
src/jd2interview/enrich/: metadata.py
src/jd2interview/generation/: llm_qna.py  package.py  question_generator.py
src/jd2interview/ingest/: models.py
src/jd2interview/parsing/: extract.py
src/jd2interview/retrieval/: availability.py  embeddings.py
src/jd2interview/skills/: llm_graph.py  models.py  persist.py  query.py  service.py  viz.py
src/jd2interview/storage/: db.py
src/jd2interview/ui/: gradio_app.py
src/jd2interview/utils/: config.py
